# full-stack-fastapi-uv

./: .pre-commit-config.yaml  README.md  compose.override.yml  compose.yml  copier.yml  deployment.md  deployment_ja.md  development.md  development_ja.md
.github/workflows/: deploy-production.yml  deploy-staging.yml  latest-changes.yml  playwright.yml  test.yml
backend/: Dockerfile  README.md  README_ja.md  pyproject.toml
frontend/: README.md  README_ja.md
scripts/: build.sh  deploy.sh  test-local.sh
