[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    { name = "Admin", email = "admin@example.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uvicorn[standard]>=0.30.6",
    "fastapi>=0.112.2",
    "python-multipart>=0.0.9",
    "email-validator>=2.2.0",
    "tenacity>=9.0.0",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "emails>=0.6",
    "jinja2>=3.1.4",
    "alembic>=1.13.2",
    "httpx>=0.27.0",
    "sqlmodel>=0.0.21",
    "pyjwt>=2.9.0",
    "psycopg[binary]>=3.2.1",
    "sentry-sdk[fastapi]>=2.13.0",
    "passlib[bcrypt]>=1.7.4",
    "sqlalchemy>=2.0.32",
    "bcrypt==4.0.1",  # Pin bcrypt until passlib supports the latest
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "mypy>=1.11.1",
    "pre-commit>=3.8.0",
    "ruff>=0.6.1",
    "types-passlib>=1.7.7.20240106",
    "coverage>=7.4.3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py312"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]
